# my-fastapi-template

./: .env.example  Dockerfile  README.md  alembic.ini  justfile  pyproject.toml
.cursor/rules/: project-rule.mdc
alembic/: env.py  script.py.mako
app/: main.py
app/api/: __init__.py  deps.py  routers_registry.py
app/api/routers/: auth.py  users.py
app/core/: __init__.py  problem.py  security.py  setting.py
app/db/: sql.py
app/models/: user_model.py
app/models/mixin/: timestamp.py
app/repositories/: user_repo.py
app/schemas/: auth_schema.py  user_schema.py
app/schemas/common/: jwt.py
app/services/: auth_service.py  user_service.py
app/utils/: __init__.py  crypto.py  time_utils.py  uuid_utils.py
code_templates/: _model.py.tpl  _router.py.tpl
docs/: database_migration.md
scripts/: gen_router.py  gen_service.py
