[project]
name = "my-fastapi-template"
version = "0.1.0"
description = ""
authors = [{ name = "jason9294", email = "jason9294@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "alembic (>=1.16.4,<2.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "uuid7 (>=0.1.0,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# pytest-asyncio
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# 註冊 markers
markers = ["endpoint: 端點測試"]
